--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Prueba 1</h1>
-
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quisquam vel doloremque beatae culpa vero eveniet saepe nesciunt magnam accusamus, ratione sequi magni quidem nobis incidunt explicabo reprehenderit atque facere sapiente!</p> 
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
